@startuml
package com.csse3200.game.screens {
    class MainGameScreen {
        - gameArea: GameArea
        - miniMapDisplay: MiniMapDisplay

        + MainGameScreen(game: GdxGame)
        + pause()
        + resume()
        + getGameArea(): GameArea
    }

    class Renderer {
        + render()
        + resize(width: int, height: int)
        + dispose()
    }

    class PhysicsEngine {
        + update()
    }

    class GameArea {
        + pauseMusic()
        + playMusic()
        + getPlayer(): Entity
        + getEnemies(): List<Entity>
    }
}

package com.csse3200.game.areas {
    class MiniMapDisplay {
        - player: Entity
        - enemies: List<Entity>
        - miniMapBackground: Texture
        - greenDotPointImage: Image
        - redDotPointImages: List<Image>
        - blueDotPointImages: List<Image>
        - purplePointImages: List<Image>
        - largeRedDotPointImages: List<Image>
        - gameArea: GameArea
        - scaleFactor: int
        - miniMapX: float
        - miniMapY: float
        - miniMapSize: int

        + MiniMapDisplay(gameArea: GameArea)
        + initializeAllImages()
        + initializeGreenPointImages()
        + initializeBluePointImages()
        + initializePurplePointImages()
        + initializeRedPointImages()
        + initializeLargeRedPointImages()

        + transferToMiniMapPos(entity: Entity): Vector2
        - updatePoints(pointImages:List<Images>, entities:List<Entity>)
        + updateAllPoints()
        + update()
        + draw(batch: SpriteBatch)
    }
}

MainGameScreen --> Renderer
MainGameScreen --> PhysicsEngine
MainGameScreen --> GameArea
GameArea --> MiniMapDisplay
@enduml
